test/libsolidity/syntaxTests/pragma/experimental_empty_string_literal.sol
pragma experimental "";
// ----
// SyntaxError 3250: (0-23='pragma experimental "";'): Empty experimental feature name is invalid.
